Added feature to go back to index

--- a/recipes/bacon-pancakes.html
+++ b/recipes/bacon-pancakes.html
@@ -34,5 +34,6 @@
             <lis>Continue with the remainder of the batter.</lis>
             <li>Congrats~! You have officially made yourself a batch of Jake's amazing bacon pancakes!!! Oh yeahhhh~</li>
         </ol>
+        <a href="file:///Users/arthalou/Desktop/Odin/Foundations/HTML/repos/odin-recipes/index.html">Click Me Back</a>
     </body>
 </html>
