Added link to go back to index

--- a/recipes/multiverse-pickles.html
+++ b/recipes/multiverse-pickles.html
@@ -39,7 +39,7 @@
             <li>After 2 ½ hours, pull from the sous vide and let completely cool to room temperature before putting in the fridge overnight.</li>
             <li>In the other jar, add all of the same things but do not put into sous vide bath, and crush the garlic a little bit before adding. Also for the brine use a salt and water (100g salt and 2 cups of water) only brine with filtered water.</li>
             <li>Let the second jar sit for 3-7 days, room temperature, burping once a day to let the gas escape.</li>
-            <li>Ba dah bing, ba dah boom! You got yourself some original Prismo pickles! Some super exciting stuff if I say so myself. Also, to note, please do not give these pickles to your dog unless it from the magic shapeshifting variety. Enjoy friends!</li>
+            <li>Ba dah bing, ba dah boom! You got yourself some original Prismo pickles! Some super exciting stuff if I say so myself. Also, to note, please do not give these pickles to your dog unless they are from the magical shapeshifting variety. Enjoy friends!</li>
         </ol>
         <a href="file:///Users/arthalou/Desktop/Odin/Foundations/HTML/repos/odin-recipes/index.html">Click Me Back</a>
     </body>
